Fix the layout on mobile and make it default
The header / footer situation wsa not working with mobile browsers, so
fix that, and make mobile layout the default,
and only override on large enough screens.

Tap targets still need to improved.

--- a/assets/wtg-shell/css/site-cacheable/40-styles/60-page-header-footer.css
+++ b/assets/wtg-shell/css/site-cacheable/40-styles/60-page-header-footer.css
@@ -5,12 +5,31 @@ header:first-of-type {
 	border-width: 1px;
 }
 
-main > footer:last-of-type {
-	font-style: italic;
-}
-
 main > footer:last-of-type > details > summary {
 	padding-right: .8em;
+}
+
+header:first-of-type > details:first-of-type > summary {
+	line-height: 2.5;
+	list-style-type: none;
+	text-align: right;
+}
+
+header:first-of-type > details:first-of-type > summary > span {
+	margin-left: auto;
+	vertical-align: middle;
+}
+
+header:first-of-type > details:first-of-type > summary > svg {
+	vertical-align: middle;
+}
+
+header:first-of-type > details:first-of-type > summary > span + svg {
+	margin-left: .4em;
+}
+
+main > footer:last-of-type {
+	font-style: italic;
 }
 
 main > footer:last-of-type > details[open] {
