--- a/assets/wtg-shell/css/site-cacheable/50-layout/30-page.css
+++ b/assets/wtg-shell/css/site-cacheable/50-layout/30-page.css
@@ -1,22 +1,55 @@
 /* CSS for top-level page layout */
 
 body {
-	display: grid;
-	grid-template-rows: auto 1fr;
-	height: 100vh;
-	overflow: hidden;
+	display: block;
+	left: 0;
+	overflow: auto;
+	position: relative;
+	top: 0;
+	z-index: 3
+}
+
+body > header {
+	left: 0;
+	position: sticky;
+	top: 0;
+	width: 100%;
+	z-index: 7;
 }
 
 body header + div {
 	display: grid;
 	grid-template-rows: 1fr auto;
-	min-height: 100%;
-	overflow-y: auto;
+	left: 0;
+	height: 100%;
+	min-height: calc(100svh - 2.75rem);
+	overflow: hidden;
+	position: relative;
+	top: 0;
+	z-index: 6
 }
 
 main {
 	left: 0;
+	height: 100%;
 	position: relative;
 	top: 0;
 	z-index: 5
+}
+
+body header + div > main {
+	overflow: hidden;
+}
+
+@media screen and (width >= 700px) {
+	body header + div {
+		height: auto;
+		min-height: 100%;
+		overflow-y: auto;
+	}
+
+	body header + div > main {
+		height: auto;
+		overflow: visible;
+	}
 }
