--- a/assets/wtg-shell/css/site-cacheable/50-layout/40-page-header-footer.css
+++ b/assets/wtg-shell/css/site-cacheable/50-layout/40-page-header-footer.css
@@ -5,123 +5,35 @@ header:first-of-type {
 	padding: 0;
 }
 
-header:first-of-type nav {
-	column-gap: 1rem;
-	display: flex;
-	flex-flow: row nowrap;
-	height: 100%;
-	justify-content: flex-end;
-	overflow: hidden;
-	padding-left: .4rem;
-	padding-right: .4rem;
-}
-
-header:first-of-type nav menu {
-	flex: content 0 0;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding-left: 0;
-}
-
-header:first-of-type nav menu li {
-	list-style-type: none;
-}
-
-header:first-of-type nav menu a {
-	display: block;
-	padding: .4em;
-}
-
-header:first-of-type nav > menu:first-of-type {
-	overflow: hidden;
-}
-
-header:first-of-type nav > menu:first-of-type > li {
-	overflow: hidden;
-}
-
-header:first-of-type nav > menu:first-of-type > li a {
-	display: block;
-	overflow: hidden;
-	padding: .4rem;
-}
-
-header:first-of-type nav details {
+header:first-of-type > nav details {
 	align-self: center;
 	margin-left: auto;
 }
 
-header:first-of-type nav details summary {
+header:first-of-type > nav details summary {
 	border: solid 1px;
 	padding-left: .4em;
 	padding-right: .4em;
 }
 
-header:first-of-type nav details[open] {
+header:first-of-type > nav details[open] {
 	display: block;
 	text-align: right;
 	width: 100%;
 }
 
-header:first-of-type nav details[open] summary {
+header:first-of-type > nav details[open] summary {
 	display: inline;
 	margin-right: 1em;
 }
 
-body > div > footer:last-of-type > div {
-	margin-left: 0;
-	margin-right: 0;
-	padding: .4em;
-}
-
-header:first-of-type nav details[open] > div {
-	border-right: solid 2px;
-	display: inline;
-	flex-flow: row nowrap;
-	margin-left: 0;
-	padding-right: .8em;
-}
-
-header:first-of-type nav details[open] span {
-	display: inline-block;
-}
-
-header:first-of-type nav details[open] span a {
-	display: block;
-	height: 100%;
+header:first-of-type > details:first-of-type > nav details summary {
+	border: solid 1px;
+	margin-bottom: .6em;
+	margin-top: .6em;
+	padding-left: .4em;
 	padding-right: .4em;
-	width: 100%;
-}
-
-header:first-of-type nav details[open] span + span {
-	border-left: solid 2px;
-	padding-right: .6em;
-}
-
-header:first-of-type nav menu:nth-of-type(2) {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: flex-end;
-}
-
-
-header:first-of-type nav menu:nth-of-type(2) li {
-	margin-left: 1em;
-	margin-right: 1em;
-}
-
-header:first-of-type nav menu:nth-of-type(2) li:last-of-type {
-	margin-left: 1em;
-	margin-right: 0;
-}
-
-header:first-of-type nav menu:nth-of-type(2) li:first-of-type {
-	margin-left: 0;
-	margin-right: 1em;
-}
-
-main > footer:last-of-type {
-	min-height: 2em;
+	width: max-content;
 }
 
 main > footer:last-of-type > details {
@@ -132,10 +44,188 @@ main > footer:last-of-type > details {
 	position: absolute;
 	right: 0;
 	width: max-content;
-	z-index: 7;
+	z-index: 9;
+}
+
+header:first-of-type > details:first-of-type {
+	display: block;
+	height: 100%;
+	min-height: 2.5em;
+	overflow: hidden;
+	padding-left: .4rem;
+	padding-right: .4rem;
+	position: relative;
+	right: 0;
+	top: 0;
+	z-index: 10;
+}
+
+header:first-of-type > details:first-of-type[open] {
+	left: auto;
+	min-height: 70vh;
+	height: max-content;
+	max-height: 100vh;
+	overflow-y: auto;
+	position: fixed;
+	right: 0;
+	width: 80vw;
+	z-index: 10;
+}
+
+body > div > footer:last-of-type > div {
+	margin-left: 0;
+	margin-right: 0;
+	padding: .4em;
+}
+
+header:first-of-type > nav details[open] > div {
+	border-right: solid 2px;
+	display: inline;
+	flex-flow: row nowrap;
+	margin-left: 0;
+	padding-right: .8em;
+}
+
+header:first-of-type:has(details:first-of-type[open]) + div {
+	min-height: 100svh;
+}
+
+header:first-of-type > nav {
+	column-gap: 1rem;
+	display: flex;
+	flex-flow: row nowrap;
+	height: 100%;
+	justify-content: flex-end;
+	left: 0;
+	overflow: hidden;
+	padding-left: .4rem;
+	padding-right: .4rem;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 3;
+}
+
+header:first-of-type > nav menu {
+	flex: content 0 0;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding-left: 0;
+}
+
+header:first-of-type > nav menu li {
+	list-style-type: none;
+}
+
+header:first-of-type > nav menu a {
+	display: block;
+	padding: .4em;
+}
+
+header:first-of-type > nav > menu:first-of-type {
+	overflow: hidden;
+}
+
+header:first-of-type > nav > menu:first-of-type > li {
+	overflow: hidden;
+}
+
+header:first-of-type > nav > menu:first-of-type > li a {
+	display: block;
+	overflow: hidden;
+	padding: .4rem;
+}
+
+header:first-of-type > nav menu:nth-of-type(2) {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: flex-end;
+}
+
+header:first-of-type > nav menu:nth-of-type(2) li {
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+header:first-of-type > details:first-of-type nav {
+	margin-bottom: 1em;
+	margin-top: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+header:first-of-type > details:first-of-type nav menu {
+	margin-bottom: 0;
+	margin-top: 0;
+	padding-left: 0;
+}
+
+header:first-of-type > details:first-of-type nav menu li {
+	list-style-type: none;
+	margin-bottom: .6em;
+	margin-top: .6em;
+}
+
+header:first-of-type > details:first-of-type nav > details summary {
+	list-style-type: none;
+}
+
+header:first-of-type > nav details[open] span {
+	display: inline-block;
+}
+
+header:first-of-type > nav details[open] span a {
+	display: block;
+	height: 100%;
+	padding-right: .4em;
+	width: 100%;
+}
+
+header:first-of-type > nav details[open] span + span {
+	border-left: solid 2px;
+	padding-right: .6em;
+}
+
+header:first-of-type > nav menu:nth-of-type(2) li:last-of-type {
+	margin-left: 1em;
+	margin-right: 0;
+}
+
+header:first-of-type > nav menu:nth-of-type(2) li:first-of-type {
+	margin-left: 0;
+	margin-right: 1em;
+}
+
+main > footer:last-of-type {
+	min-height: 2em;
 }
 
 body > div > footer:last-of-type {
 	padding-left: .4em;
 	padding-right: .4em;
+}
+
+@media screen and (width >= 700px) {
+	body {
+		display: grid;
+		grid-template-rows: auto 1fr;
+		height: 100svh;
+		left: 0;
+		overflow: hidden;
+		position: relative;
+		top: 0;
+		z-index: 3
+	}
+
+	body > header {
+		position: relative;
+	}
+
+	header:first-of-type > details:first-of-type {
+		z-index: 2;
+	}
+
+	header:first-of-type > nav {
+		z-index: 5;
+	}
 }
